enable "tokenPaths" statement in swagger oauth
